[workspace]
resolver = "2"
members = [
    "fiber",
    "fastlane",
    "native",
    "frameworks/pinocchio",
    "frameworks/anchor",
    "frameworks/quasar",
    "sdk",
]

[workspace.package]
repository = "https://github.com/solana-foundation/fiber"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
fiber = { path = "./fiber" }
fastlane = { path = "./fastlane" }
fiber-native = { path = "./native" }
fiber-sdk = { path = "./sdk" }
mollusk-svm = { version = "0.12.0" }
mollusk-svm-bencher = { version = "0.12.0" }
blake3 = { version = "1" }
pinocchio = { version = "0.11.0" }
pinocchio-system = { version = "0.5.0" }
anchor-lang = { version = "1.0.0" }
quasar-lang = { git = "https://github.com/blueshift-gg/quasar" }
solana-account = { version = "3.4.0" }
solana-account-view = { version = "2.0.0" }
solana-address = { version = "2.0.0" }
solana-instruction-view = { version = "2.1.0" }
solana-clock = { version = "3.0.1" }
solana-compute-budget-interface = { version = "3.0.0" }
solana-hash = { version = "3.1.0" }
solana-instruction = { version = "3.4.0" }
solana-keypair = { version = "3.0.0" }
solana-program = { version = "4.0.0" }
solana-program-error = { version = "3.0.1" }
solana-pubkey = { version = "3.0.0" }
solana-sdk-ids = { version = "3.1.0" }
solana-signature = { version = ">=3.0.0, <3.4.0" }
solana-signer = { version = "3.0.0" }
solana-system-interface = { version = "2.0.0" }
solana-transaction = { version = "3.1.0" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
