[package]
name = "fastlane"
description = "Zero-cost entrypoint macro for Fiber programs"
repository = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
