[package]
name = "fiber-native"
description = "An ultra-optimized payment channel program for Solana."
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["lib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
fiber = { workspace = true }
fastlane = { workspace = true }
pinocchio = { workspace = true }
solana-account-view = { workspace = true }

[dev-dependencies]
fiber-sdk = { workspace = true }
mollusk-svm = { workspace = true }
mollusk-svm-bencher = { workspace = true }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-instruction = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-program-error = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }

[[bench]]
name = "compute_units"
harness = false
